--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "yt-search": "^2.10.4"
+    "yt-search": "^2.10.4",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
